# ClauseDev

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  playwright.config.ts
ClauseDev/: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
ClauseDev/backend/: .env.example  AGENTS.md  pyproject.toml
ClauseDev/backend/src/clauseai_backend/: bootstrap_user_db.py  main.py
ClauseDev/backend/src/clauseai_backend/api/: __init__.py  auth.py  deps.py  editor.py  pipeline.py  reference.py  router.py  workflow_content.py
ClauseDev/backend/src/clauseai_backend/core/: config.py
ClauseDev/backend/src/clauseai_backend/db/: session.py
ClauseDev/backend/src/clauseai_backend/models/: auth.py  projects.py  workflow.py
ClauseDev/backend/src/clauseai_backend/schemas/: chat.py
ClauseDev/backend/src/clauseai_backend/services/: chat.py  codex_client.py  editor_runtime.py  file_extraction.py  metadata.py  openai_compat_client.py  prompt_loader.py  reference_search.py
ClauseDev/backend/src/clauseai_backend/workflows/: AGENTS.md  orchestrator.py
ClauseDev/backend/tests/: test_chat_flow.py
ClauseDev/clauseainaviprod/backend/: pyproject.toml
ClauseDev/clauseainaviprod/backend/src/clause_backend/: main.py
Step1/: .env.example  FUTURE.md  requirements.txt
Step4/: .env.example  README.md  requirements.txt
backend/: .env.example  AGENTS.md
clauseainaviprod/: .gitignore  DESIGN.md  PROJECT_MEMORY.md  README.md  package-lock.json  package.json  playwright.config.ts
frontend/: index.html  package.json
plan/: AGENTS.md  source-review.md
prompts/: prompt.md  test-prompt.md
(+396 files in other folders)
