[project]
name = "clause-backend"
version = "0.1.0"
description = "Clause backend API"
authors = [{ name = "Codex" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "orjson>=3.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
clause-api = "clause_backend.main:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

